Do not require phone authentication twice for "terra apply"
