# src/bread/swagger/models/canoe_complete_terraform_deploy_request.go
@@ -16,6 +16,9 @@ type CanoeCompleteTerraformDeployRequest struct {
 	// deploy id
 	DeployID int64 `json:"deploy_id,omitempty"`
 
+	// request id
+	RequestID string `json:"request_id,omitempty"`
+
 	// successful
 	Successful bool `json:"successful,omitempty"`
 
