# src/canoe/app/models/terraform_deploy_response.rb
@@ -1,6 +1,6 @@
 class TerraformDeployResponse
   def self.locked(deploy)
-    new(deploy.id, "Terraform estate #{deploy.estate_name.inspect} is locked by #{deploy.user_name}")
+    new(deploy, "Terraform estate #{deploy.estate_name.inspect} is locked by #{deploy.user_name}")
   end
 
   def self.unknown_estate(name)
@@ -8,11 +8,12 @@ class TerraformDeployResponse
   end
 
   def self.success(deploy)
-    new(deploy.id, "")
+    new(deploy, "")
   end
 
-  def initialize(deploy_id, error_message)
-    @deploy_id = deploy_id
+  def initialize(deploy, error_message)
+    @deploy_id = deploy.try(:id)
+    @request_id = deploy.try(:request_id)
     @error_message = error_message
   end
 
@@ -27,10 +28,11 @@ class TerraformDeployResponse
   private
 
   def proto_response
-    Canoe::CreateTerraformDeployResponse.new(
+    Canoe::TerraformDeployResponse.new(
       error: !@error_message.to_s.empty?,
       message: @error_message,
-      deploy_id: @deploy_id.to_i
+      deploy_id: @deploy_id.to_i,
+      request_id: @request_id.to_s,
     )
   end
 end
